kubernetes/manifest.client.yml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: economics:client
        imagePullPolicy: Never
        ports:
        - containerPort: 80
