kubernetes/manifest.database.yml
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: database
spec:
  type: NodePort
  ports:
  - port: 5432
  selector:
    app: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: economics:database
        imagePullPolicy: Never
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: volume-postgres
      volumes:
      - name: volume-postgres
        persistentVolumeClaim:
          claimName: pv-claim-postgres
