kubernetes/manifest.products.yml
apiVersion: v1
kind: Service
metadata:
  name: products
  labels:
    app: products
spec:
  type: NodePort
  ports:
  - port: 8100
  selector:
    app: products
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - name: products
        image: economics:server-products
        imagePullPolicy: Never
        ports:
        - containerPort: 8100
