kubernetes/manifest.reverse-proxy.yml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
  labels:
    app: reverse-proxy
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: reverse-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverse-proxy
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      containers:
      - name: reverse-proxy
        image: economics:reverse-proxy
        imagePullPolicy: Never
        ports:
        - containerPort: 80
